javadocs, json bind to class in apixu module and builder to convert it to Weather class

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,10 +26,8 @@
                         <Export-Package>
                             edu.efimovta.liferay.osgi.weather.printer.service,
                             edu.efimovta.liferay.osgi.weather.service,
-                            edu.efimovta.liferay.osgi.weather.dto,
-                            edu.efimovta.liferay.osgi.weather.dto.impl
+                            edu.efimovta.liferay.osgi.weather.dto
                         </Export-Package>
-                        <!--<Export-Package/>-->
                     </instructions>
                 </configuration>
             </plugin>
