--- a/app/pom.xml
+++ b/app/pom.xml
@@ -12,13 +12,8 @@
     <artifactId>app</artifactId>
     <dependencies>
         <dependency>
-            <groupId>edu.efimovta.liferay.osgi.weather</groupId>
+            <groupId>edu.efimovta.liferay.osgi.weather-portlet</groupId>
             <artifactId>api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>edu.efimovta.liferay.osgi.weather</groupId>
-            <artifactId>file-printer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
