--- a/api-weather-printer/pom.xml
+++ b/api-weather-printer/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
+    <artifactId>api-weather-printer</artifactId>
 
     <packaging>jar</packaging>
 
@@ -52,5 +52,11 @@
             </plugin>
         </plugins>
     </build>
-
+    <dependencies>
+        <dependency>
+            <groupId>edu.efimovta.liferay.osgi.weather-portlet</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
