--- a/apixu/pom.xml
+++ b/apixu/pom.xml
@@ -18,24 +18,35 @@
             <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>biz.aQute.bndlib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.liferay</groupId>
+            <artifactId>com.liferay.portal.configuration.metatype</artifactId>
+            <version>2.0.8</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-Name>ApixuWeatherGetter</Bundle-Name>
-                        <Bundle-Description>provide ApixuWeatherGetter service (using json)</Bundle-Description>
-                        <Export-Package/>
-                    </instructions>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.apache.felix</groupId>-->
+            <!--<artifactId>maven-bundle-plugin</artifactId>-->
+            <!--<extensions>true</extensions>-->
+            <!--<configuration>-->
+            <!--<instructions>-->
+            <!--<Bundle-Name>ApixuWeatherGetter</Bundle-Name>-->
+            <!--<Bundle-Description>provide ApixuWeatherGetter service (using json)</Bundle-Description>-->
+            <!--<Export-Package/>-->
+            <!--</instructions>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
