--- a/file-printer/pom.xml
+++ b/file-printer/pom.xml
@@ -12,7 +12,12 @@
     <artifactId>file-printer</artifactId>
     <dependencies>
         <dependency>
-            <groupId>edu.efimovta.liferay.osgi.weather</groupId>
+            <groupId>edu.efimovta.liferay.osgi.weather-portlet</groupId>
+            <artifactId>api-weather-printer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.efimovta.liferay.osgi.weather-portlet</groupId>
             <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
