--- a/portlet/src/main/resources/content/Language.properties
+++ b/portlet/src/main/resources/content/Language.properties
@@ -3,3 +3,4 @@ javax.portlet.keywords.portlet=portlet,jsp
 javax.portlet.short-title.portlet=portlet JSP
 javax.portlet.title.portlet=portlet JSP Portlet
 portlet.caption=Hello from portlet JSP!
+my.portlet.mes=Hello to all!
