--- a/apixu/pom.xml
+++ b/apixu/pom.xml
@@ -29,6 +29,11 @@
             <version>2.0.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
