add weather to db works

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>portlet</module>
         <module>api-weather-printer</module>
         <module>app</module>
+        <module>db.weather</module>
     </modules>
 
 
