--- a/portlet/pom.xml
+++ b/portlet/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>edu.efimovta.liferay.osgi.db</groupId>
+            <artifactId>db.weather-api</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
