--- a/db.weather/db.weather-api/pom.xml
+++ b/db.weather/db.weather-api/pom.xml
@@ -44,5 +44,10 @@
             <version>2.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>edu.efimovta.liferay.osgi.weather-portlet</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
