--- a/db.weather/db.weather-service/src/main/resources/service.properties
+++ b/db.weather/db.weather-service/src/main/resources/service.properties
@@ -6,10 +6,11 @@
 # on this file but on the overridden version of this file.
 #
 include-and-override=${base.path}/service-ext.properties
+
 ##
 ## Build
 ##
-build.namespace=Weather
-build.number=1
-build.date=1500499207359
+build.namespace=Weatherdb
+build.number=2
+build.date=1500511210460
 build.auto.upgrade=true
