--- a/db.weather/db.weather-service/pom.xml
+++ b/db.weather/db.weather-service/pom.xml
@@ -62,6 +62,11 @@
             <version>3.2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>edu.efimovta.liferay.osgi.weather-portlet</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
